[gd_scene load_steps=18 format=2]

[ext_resource path="res://assets/imgs/entities/player/idle_32_2.png" type="Texture" id=1]
[ext_resource path="res://assets/imgs/entities/player/idle_32_3.png" type="Texture" id=2]
[ext_resource path="res://assets/imgs/entities/player/walk_32_left.png" type="Texture" id=3]
[ext_resource path="res://assets/imgs/entities/player/idle_32_1.png" type="Texture" id=4]
[ext_resource path="res://src/player/sub_states/None.gd" type="Script" id=5]
[ext_resource path="res://src/player/states/jump.gd" type="Script" id=6]
[ext_resource path="res://src/global/state_machine.gd" type="Script" id=7]
[ext_resource path="res://src/player/states/move.gd" type="Script" id=8]
[ext_resource path="res://src/player/player.gd" type="Script" id=9]
[ext_resource path="res://src/player/states/idle.gd" type="Script" id=10]
[ext_resource path="res://assets/imgs/entities/player/idle_32_4.png" type="Texture" id=11]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4.25257, 7 )

[sub_resource type="Animation" id=2]
resource_name = "idle1"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("body:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("body:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("body:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=3]
resource_name = "idle2"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("body:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("body:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("body:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=4]
resource_name = "idle3"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("body:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("body:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("body:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=5]
resource_name = "idle4"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("body:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 11 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("body:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("body:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=6]
resource_name = "walk_left"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("body:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 3 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("body:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 101
script = ExtResource( 9 )

[node name="body" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 1 )
shape = SubResource( 1 )

[node name="StateMachine" type="Node2D" parent="."]
script = ExtResource( 7 )

[node name="Idle" type="Node2D" parent="StateMachine"]
script = ExtResource( 10 )

[node name="Move" type="Node2D" parent="StateMachine"]
script = ExtResource( 8 )

[node name="Jump" type="Node2D" parent="StateMachine"]
script = ExtResource( 6 )

[node name="WallRaycasts" type="Node2D" parent="StateMachine/Jump"]
visible = false

[node name="WallRaycastsRight" type="Node2D" parent="StateMachine/Jump/WallRaycasts"]

[node name="RightUpWallRaycast2" type="RayCast2D" parent="StateMachine/Jump/WallRaycasts/WallRaycastsRight"]
position = Vector2( 0, -3 )
enabled = true
cast_to = Vector2( 7, 0 )

[node name="RightDownWallRaycast3" type="RayCast2D" parent="StateMachine/Jump/WallRaycasts/WallRaycastsRight"]
position = Vector2( 0, 7 )
enabled = true
cast_to = Vector2( 7, 0 )

[node name="WallRaycastsLeft" type="Node2D" parent="StateMachine/Jump/WallRaycasts"]

[node name="LeftUpWallRaycast" type="RayCast2D" parent="StateMachine/Jump/WallRaycasts/WallRaycastsLeft"]
position = Vector2( 0, -3 )
enabled = true
cast_to = Vector2( -7, 0 )

[node name="LeftDownWallRaycast2" type="RayCast2D" parent="StateMachine/Jump/WallRaycasts/WallRaycastsLeft"]
position = Vector2( 0, 7 )
enabled = true
cast_to = Vector2( -7, 0 )

[node name="WallRaycastBottom" type="RayCast2D" parent="StateMachine/Jump/WallRaycasts"]
enabled = true
cast_to = Vector2( 0, 10 )

[node name="WallStickyTimer" type="Timer" parent="StateMachine/Jump"]
wait_time = 0.3
one_shot = true

[node name="JumpTimer" type="Timer" parent="StateMachine/Jump"]
wait_time = 1.25
one_shot = true

[node name="ClimbTimer" type="Timer" parent="StateMachine/Jump"]
wait_time = 0.5
one_shot = true

[node name="ClimbRayCasts" type="Node2D" parent="StateMachine/Jump"]
visible = false

[node name="ClimbRayCastRight" type="RayCast2D" parent="StateMachine/Jump/ClimbRayCasts"]
position = Vector2( 0, -9 )
enabled = true
cast_to = Vector2( 8, 0 )

[node name="ClimbWallRayCastRight" type="RayCast2D" parent="StateMachine/Jump/ClimbRayCasts"]
position = Vector2( 0, -8 )
enabled = true
cast_to = Vector2( 8, 1 )

[node name="ClimbWallRayCastLeft" type="RayCast2D" parent="StateMachine/Jump/ClimbRayCasts"]
position = Vector2( 0, -8 )
enabled = true
cast_to = Vector2( -8, 1 )

[node name="ClimbRayCastLeft" type="RayCast2D" parent="StateMachine/Jump/ClimbRayCasts"]
position = Vector2( 0, -9 )
enabled = true
cast_to = Vector2( -8, 0 )

[node name="MinDashRayCast" type="RayCast2D" parent="StateMachine/Jump"]
enabled = true
cast_to = Vector2( 0, 18 )

[node name="SpecialStateMachine" type="Node2D" parent="."]
script = ExtResource( 7 )

[node name="None" type="Node2D" parent="SpecialStateMachine"]
script = ExtResource( 5 )

[node name="Invicible" type="Node2D" parent="SpecialStateMachine"]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0, 3 )
smoothing_enabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/idle1 = SubResource( 2 )
anims/idle2 = SubResource( 3 )
anims/idle3 = SubResource( 4 )
anims/idle4 = SubResource( 5 )
anims/walk_left = SubResource( 6 )
[connection signal="timeout" from="StateMachine/Jump/WallStickyTimer" to="StateMachine/Jump" method="_on_WallStickyTimer_timeout"]
[connection signal="timeout" from="StateMachine/Jump/JumpTimer" to="StateMachine/Jump" method="_on_JumpTimer_timeout"]
[connection signal="timeout" from="StateMachine/Jump/ClimbTimer" to="StateMachine/Jump" method="_on_ClimbTimer_timeout"]
